--- a/web-server/views/partials/graph.handlebars
+++ b/web-server/views/partials/graph.handlebars
@@ -1,7 +1,7 @@
 {{#each this}}
   <div class="col-sm-12 col-md-6">
     <div class="panel panel-info">
-      <div class="panel-heading text-center"><h4>{{title}}</h4></div>
+      <div class="panel-heading text-center"><h3 class="panel-title">{{title}}</h3></div>
       <div class="graph" id="graph{{@index}}"></div>
     </div>
   </div>
